# seer

./: .dockerignore  .gitignore  .vercelignore  Makefile  README.md  ROADMAP.md  TODO-PERFORMANCE.md  biome.json  components.json  index.html  package.json  vercel.json  vite.config.ts  wrangler.jsonc
.github/: FUNDING.yml
.github/workflows/: deploy-docs.yml  release.yml
docs/: CNAME  _headers  features.md  getting-started.md  index.html  index.md  installation.md  robots.txt  sitemap.xml  styles.css
docs/.vitepress/: config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  database.rs  jobs.rs  lib.rs  metadata.rs  types.rs  window.rs
src-tauri/src/bitrate/: cache.rs  jobs.rs  mod.rs  parser.rs
src-tauri/src/commands/: bitrate.rs  files.rs  installer.rs  media.rs  metadata.rs  mod.rs  settings.rs
src-tauri/src/files/: filters.rs  folder_operations.rs  mod.rs  operations.rs  rename_patterns.rs
src-tauri/src/installer/: downloads.rs  mod.rs  package_managers.rs  platforms.rs
src-tauri/src/media/: mod.rs  probe_cache.rs  streams.rs
src/components/: BitrateChart.tsx  BitratePanel.tsx  BitrateStatistics.tsx  BulkActionsBar.tsx  BulkRenameDialog.tsx  BulkStreamCleanupDialog.tsx  DependencyCheck.tsx  FileBrowser.tsx  FilterPanel.tsx  FolderCreationDialog.tsx  JobIndicator.tsx  MetadataPanel.tsx  RightPanelToggle.tsx  SettingsDialog.tsx  StreamsPanel.tsx  ThemeSwitcher.tsx  TitleBar.tsx
src/hooks/: useAppInitialization.ts
(+44 files in other folders)
